switch from Collections and Guava Collections to Javas