@@ -7,13 +7,12 @@
 
 package com.velocitypowered.api.plugin;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableSet;
 import com.velocitypowered.api.plugin.meta.PluginDependency;
 import java.nio.file.Path;
 import java.util.Collection;
 import java.util.List;
 import java.util.Optional;
+import java.util.Set;
 import java.util.regex.Pattern;
 
 /**
@@ -83,7 +82,7 @@ public interface PluginDescription {
    * @see Plugin#authors()
    */
   default List<String> getAuthors() {
-    return ImmutableList.of();
+    return List.of();
   }
 
   /**
@@ -93,7 +92,7 @@ public interface PluginDescription {
    * @see Plugin#dependencies()
    */
   default Collection<PluginDependency> getDependencies() {
-    return ImmutableSet.of();
+    return Set.of();
   }
 
   default Optional<PluginDependency> getDependency(String id) {
