@@ -9,8 +9,8 @@ package com.velocitypowered.api.proxy.server;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
-import com.google.common.collect.ImmutableList;
 import com.velocitypowered.api.proxy.server.QueryResponse.PluginInformation;
+import java.util.List;
 import org.junit.jupiter.api.Test;
 
 class QueryResponseTest {
@@ -18,8 +18,8 @@ class QueryResponseTest {
   @Test
   void toBuilderConsistency() {
     QueryResponse response = new QueryResponse("test", "test", "test",
-        1, 2, "test", 1234, ImmutableList.of("tuxed"),
-        "0.0.1", ImmutableList.of(new PluginInformation("test", "1.0.0"),
+        1, 2, "test", 1234, List.of("tuxed"),
+        "0.0.1", List.of(new PluginInformation("test", "1.0.0"),
           new PluginInformation("test2", null)));
     assertEquals(response, response.toBuilder().build());
   }
