@@ -9,10 +9,10 @@ package com.velocitypowered.api.proxy.server;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
-import com.google.common.collect.ImmutableList;
 import com.velocitypowered.api.proxy.server.ServerPing.Players;
 import com.velocitypowered.api.proxy.server.ServerPing.SamplePlayer;
 import com.velocitypowered.api.proxy.server.ServerPing.Version;
+import java.util.List;
 import java.util.UUID;
 import net.kyori.adventure.text.Component;
 import org.junit.jupiter.api.Test;
@@ -22,7 +22,7 @@ class ServerPingTest {
   @Test
   void asBuilderConsistency() {
     ServerPing ping = new ServerPing(new Version(404, "1.13.2"),
-        new Players(1, 1, ImmutableList.of(new SamplePlayer("tuxed", UUID.randomUUID()))),
+        new Players(1, 1, List.of(new SamplePlayer("tuxed", UUID.randomUUID()))),
         Component.text("test"), null);
     assertEquals(ping, ping.asBuilder().build());
   }
