@@ -20,7 +20,6 @@ package com.velocitypowered.proxy.command.builtin;
 import com.velocitypowered.api.proxy.ProxyServer;
 import com.velocitypowered.api.proxy.server.RegisteredServer;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 
@@ -33,6 +32,6 @@ class BuiltinCommandUtil {
   static List<RegisteredServer> sortedServerList(ProxyServer proxy) {
     List<RegisteredServer> servers = new ArrayList<>(proxy.getAllServers());
     servers.sort(Comparator.comparing(RegisteredServer::getServerInfo));
-    return Collections.unmodifiableList(servers);
+    return List.copyOf(servers);
   }
 }
