@@ -20,13 +20,14 @@ package com.velocitypowered.proxy.event;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.reflect.TypeToken;
 import java.util.Collection;
+import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentMap;
 import java.util.stream.Collectors;
 
 class EventTypeTracker {
 
-  private final ConcurrentMap<Class<?>, ImmutableSet<Class<?>>> friends;
+  private final ConcurrentMap<Class<?>, Set<Class<?>>> friends;
 
   public EventTypeTracker() {
     this.friends = new ConcurrentHashMap<>();
@@ -45,7 +46,7 @@ class EventTypeTracker {
 
       this.friends.merge(
           type,
-          ImmutableSet.of(eventType),
+          Set.of(eventType),
           (oldVal, newSingleton) -> ImmutableSet.<Class<?>>builder()
               .addAll(oldVal)
               .addAll(newSingleton)
