@@ -45,7 +45,6 @@ import java.lang.reflect.Modifier;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -356,7 +355,7 @@ public class VelocityEventManager implements EventManager {
 
     final HandlerRegistration registration = new HandlerRegistration(pluginContainer,
         (short) order.ordinal(), eventClass, handler, (EventHandler<Object>) handler);
-    register(Collections.singletonList(registration));
+    register(List.of(registration));
   }
 
   /**
