@@ -20,7 +20,6 @@ package com.velocitypowered.proxy.protocol.util;
 import static com.google.common.base.Preconditions.checkArgument;
 import static com.google.common.base.Preconditions.checkNotNull;
 
-import com.google.common.collect.ImmutableList;
 import com.velocitypowered.api.network.ProtocolVersion;
 import com.velocitypowered.api.util.ProxyVersion;
 import com.velocitypowered.proxy.protocol.ProtocolUtils;
@@ -98,10 +97,10 @@ public final class PluginMessageUtil {
     if (!message.content().isReadable()) {
       // If we try to split this, we will get an one-element array with the empty string, which
       // has caused issues with 1.13+ compatibility. Just return an empty list.
-      return ImmutableList.of();
+      return List.of();
     }
     String channels = message.content().toString(StandardCharsets.UTF_8);
-    return ImmutableList.copyOf(channels.split("\0"));
+    return List.of(channels.split("\0"));
   }
 
   /**
