@@ -23,12 +23,10 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.fail;
 
-import com.google.common.collect.ImmutableList;
 import com.mojang.brigadier.builder.LiteralArgumentBuilder;
 import com.mojang.brigadier.builder.RequiredArgumentBuilder;
 import com.velocitypowered.api.command.CommandSource;
 import com.velocitypowered.api.command.SimpleCommand;
-import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CompletionException;
@@ -220,7 +218,7 @@ public class SimpleCommandTests extends CommandTestSuite {
       public List<String> suggest(final Invocation invocation) {
         assertEquals("hello", invocation.alias());
         assertArrayEquals(new String[0], invocation.arguments());
-        return ImmutableList.of("world", "people"); // ensures we don't mutate the user's list
+        return List.of("world", "people"); // ensures we don't mutate the user's list
       }
     });
 
@@ -239,7 +237,7 @@ public class SimpleCommandTests extends CommandTestSuite {
       @Override
       public List<String> suggest(final Invocation invocation) {
         assertEquals("hello", invocation.alias());
-        return ImmutableList.of("world");
+        return List.of("world");
       }
     });
 
@@ -258,7 +256,7 @@ public class SimpleCommandTests extends CommandTestSuite {
       @Override
       public List<String> suggest(final Invocation invocation) {
         assertArrayEquals(new String[]{"12345678"}, invocation.arguments());
-        return Collections.singletonList("9");
+        return List.of("9");
       }
     });
 
@@ -451,7 +449,7 @@ public class SimpleCommandTests extends CommandTestSuite {
 
       @Override
       public List<String> suggest(final Invocation invocation) {
-        return ImmutableList.of("world");
+        return List.of("world");
       }
     });
 
@@ -477,7 +475,7 @@ public class SimpleCommandTests extends CommandTestSuite {
 
       @Override
       public List<String> suggest(final Invocation invocation) {
-        return ImmutableList.of("world");
+        return List.of("world");
       }
     });
 
